Edit | Delete | List | 16-8-2021 : 12:15

--- a/src/app/employe/form-container/form-container.component.html
+++ b/src/app/employe/form-container/form-container.component.html
@@ -1,1 +1,2 @@
 <p>form-container works!</p>
+<app-form-presentation [employlistbyId]="employlistbyId$ |async" (userData)="adduserdetail($event)"></app-form-presentation>
