--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,18 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="user">
   <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="/">Home</a>
+      <a class="nav-item nav-link" routerLink="/home">Home</a>
       <a class="nav-item nav-link" routerLink="/employe">Employe</a>
       <a class="nav-item nav-link" (click)="logout()">Logout</a>
   </div>
 </nav>
-<p>Works</p>
 <div class="jumbotron">
   <div class="container">
       <div class="row">
-          <div class="col-sm-6 offset-sm-3">
-          <!--   <a routerLink='/login'>login</a> -->
+          
+            <!-- <a routerLink='/login'>login</a> -->
             <!-- <a routerLink='/employe'>Emplye</a> -->
               <router-outlet></router-outlet>
-          </div>
+          
       </div>
   </div>
 </div>
