--- a/src/app/employe/list-container/list-container.component.html
+++ b/src/app/employe/list-container/list-container.component.html
@@ -1,1 +1,2 @@
 <p>list-container works!</p>
+<app-list-presentation [employlist]="employlist$ |async" (deleteId)="onDeleteId($event)" (sort)='sort($event)'></app-list-presentation>
