--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,13 @@
   <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/home">Home</a>
       <a class="nav-item nav-link" routerLink="/employe">Employe</a>
-      <a class="nav-item nav-link" (click)="logout()">Logout</a>
+      <a class="nav-item nav-link ml-auto" (click)="logout()">Logout</a>
   </div>
 </nav>
 <div class="jumbotron">
   <div class="container">
       <div class="row">
-          
-            <!-- <a routerLink='/login'>login</a> -->
-            <!-- <a routerLink='/employe'>Emplye</a> -->
-              <router-outlet></router-outlet>
-          
+        <router-outlet></router-outlet> 
       </div>
   </div>
 </div>
