--- a/src/app/employe/form-container/form-presentation/form-presentation.component.html
+++ b/src/app/employe/form-container/form-presentation/form-presentation.component.html
@@ -1,4 +1,26 @@
-<p>form-presentation works!</p>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+        <title>Document</title>
+    </head>
+    <body>
+        <ol class="breadcrumb align-items-center bg-white">
+           
+            <li class="divide breadcrumb-item active" aria-current="page">
+              <div class="dropdown d-inline">
+                  <tr class="btn p-0 btn-transparent text-primary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Add Employe
+                  </tr>
+                 
+                </div>
+            </li>
+          </ol>
+        
+    
 <div class="container">
     <form class="row" [formGroup]="userForm">
 
@@ -34,14 +56,14 @@
             <label for="gender" class="form-label">Gender: </label>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="gender" id="male" formControlName='gender'
-                    value="male" checked>
+                    value="M" checked>
                 <label class="form-check-label" for="male">
                     Male
                 </label>
             </div>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="gender" formControlName='gender' id="female"
-                    value="female">
+                    value="F">
                 <label class="form-check-label" for="female">
                     Female
                 </label>
@@ -72,3 +94,5 @@
 
     </form>
 </div>
+</body>
+</html>
