--- a/src/app/employe/list-container/list-presentation/list-presentation.component.html
+++ b/src/app/employe/list-container/list-presentation/list-presentation.component.html
@@ -1,103 +1,85 @@
-<p>list-presentation works!</p>
-<div>
-
-     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" title="add" routerLink='add' >
-        Add
-    </button>
-    <!--     <div class="col-md-3">
-        <div class="form-group mb-4">
-            <label>Search</label>
-            <input class="form-control" type="text" [(ngModel)]="searchText" placeholder="Search">
-        </div>
-    </div> -->
-
-    <table class="table table-responsive table-hover">
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <title>Document</title>
+</head>
+<body>
+    <header class="d-flex align-items-center justify-content-between pb-4">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb align-items-center bg-white">
+              <li class="breadcrumb-item"><a href="#"><span class="fa fa-home"></span></a></li>
+              <li class="divide breadcrumb-item active" aria-current="page">
+                <div class="dropdown d-inline">
+                    <tr class="btn p-0 btn-transparent text-danger" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Employees
+                    </tr>
+                  </div>
+              </li>
+            </ol>
+          </nav>
+          <div class="secarch px-2 bg-white">
+              <input class="border border-gray-500 p-1" type="search" name="search" id="search" placeholder="search" [(ngModel)]="searchText" placeholder="Search">
+              <label class="search-label" for="search"><span class="fa fa-search p-2 bg-primary text-white"></span></label>
+          </div>
+    </header>
+    <div class="sub-header d-flex justify-content-between align-items-center">
+      <div class="buttons px-3">
+        <button class="btn btn-primary mr-2" routerLink='add' >Add New</button>
+        <button class="btn btn-outline-danger " >Delete</button>
+       <!--  <button class="btn btn-outline-danger " (click)="deleteEmploy()">Delete Selected Employe(s)>Delete</button> -->
+      </div>
+    </div>
+    <div class="table-responsive p-4">
+      <table class="table table-bordered" >
         <thead>
-            <tr>
-                <th scope="col">
-
-                    <span>Id</span>
-                </th>
-
-                <th class="" aria-hidden="true" scope="pointer" (click)="sortData('fname')">
-                    <span>First Name </span>
-                    <span class="fa fa-sort"></span>
-                    <span *ngIf="key =='fname'"
-                        [ngClass]="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
-                </th>
-                <th scope="pointer" (click)="sortData('lname')">
-                    <span>Last Name </span>
-                    <span class="fa fa-sort"></span>
-                    <span class="glyphicon sort-icon" *ngIf="key =='lname'"
-                        [ngClass]="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
-                </th>
-                <th scope="col">
-                    <span>Date of Birth </span>
-                </th>
-                <th scope="col">
-                    <span>Gender </span>
-                </th>
-                <th scope="col" (click)="sortData('department')">
-                    <span>Department </span>
-                    <span class="fa fa-sort"></span>
-                    <span class="glyphicon sort-icon" *ngIf="key =='department'"
-                        [ngClass]="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
-                </th>
-
-                <th scope="col">Action</th>
-
-            </tr>
+          <tr>
+            <th scope="col"></th>
+            <!-- <th><input type="checkbox" [checked]="isAllCheckBoxChecked()" (change)="checkAllCheckBox($event)"></th> -->
+            <th scope="col"><input type="checkbox" name="delete" id="delete"></th>
+            <th class="" aria-hidden="true" scope="pointer" (click)="sortData('fname')">
+                <span>First Name </span>
+                <span class="fa fa-sort"></span>
+                <span *ngIf="key =='fname'"
+                    [ngClass]="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+            </th>
+            <th scope="pointer" (click)="sortData('lname')">
+                <span>Last Name </span>
+                <span class="fa fa-sort"></span>
+                <span class="glyphicon sort-icon" *ngIf="key =='lname'"
+                    [ngClass]="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+            </th>
+            <th scope="col">Birth date</th>
+            <th scope="col">Gender</th>
+            <th scope="col">Enabled</th>
+            <th scope="col" (click)="sortData('department')">
+                <span>Department </span>
+                <span class="fa fa-sort"></span>
+                <span class="glyphicon sort-icon" *ngIf="key =='department'"
+                    [ngClass]="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+            </th>
+          </tr>
         </thead>
-        <tbody *ngFor="let userlist of employlist">
-            <tr>
-                <td> {{userlist.id}} </td>
-                <td> {{userlist.fname}} </td>
-                <td> {{userlist.lname}} </td>
-                <td> {{userlist.birthdate}} </td>
-                <td> {{userlist.gender}} </td>
-                <td> {{userlist.department}} </td>
-
-                <td>
-
-                    <!--  <button class="fa fa-ellipsis-v"> -->
-                    <div class="dropdown">
-                        <button class="fa fa-ellipsis-h" type="button" id="dropdownMenu2" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                            <button class="dropdown-item" type="button"
-                                routerLink="/employe/Edit/{{userlist.id}}">Edit</button>
-                            <button class="dropdown-item" type="button"
-                                (click)="deleteuserdetail(userlist.id)">Delete</button>
-
-                        </div>
-                    </div>
-                </td>
-            </tr>
+        <tbody *ngFor="let userlist of employlist | filter: searchText">
+        <tr>
+            <td scope="row" class="d-flex">
+                <span class="btn fa fa-pencil text-primary" routerLink="/employe/Edit/{{userlist.id}}"></span>
+                <span class="btn fa fa-trash text-danger" (click)="deleteuserdetail(userlist.id)"></span>
+            </td>
+            <!-- <td><input type="checkbox" value="{{userlist.id}}" [(ngModel)]="employlist[i].checked" name="" id=""></td> -->
+            <td><input type="checkbox" name="" id=""></td>
+            <td> {{userlist.fname}} </td>
+            <td> {{userlist.lname}} </td>
+            <td> {{userlist.birthdate}} </td>
+            <td> {{userlist.gender}} </td>
+            <td class="mx-auto"><input type="checkbox" name="" id=""></td>
+            <td> {{userlist.department}} </td>
+        </tr>
         </tbody>
-    </table>
-    <!-- <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </li>
-        </ul>
-    </nav> -->
-    <!--  <ng-template #noResults>
-        <p>No results found for "{{searchText}}".</p>
-    </ng-template> -->
-</div>
+      </table>
+    </div>
+</body>
+</html>
